k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dota2-cast-assist-service
  labels:
    app: dota2-cast-assist-app
spec:
  type: ClusterIP
  selector:
    app: dota2-cast-assist-app
  ports:
    - protocol: TCP
      # service
      port: 8082
      # container
      targetPort: 8080
